--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "^0.11.4",
     "path": "^0.12.7",
     "fs": "^0.0.1-security",
-    "buffer": "^6.0.3"
+    "buffer": "^6.0.3",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
